Added payments
